# spark-rs

./: .env  .gitignore  Cargo.toml  Forc.toml  README.md  indexer-spec.md
limit-order-predicate/src/: main.sw  utils.sw
predicate-buy/: Forc.toml
predicate-buy/src/: main.sw
predicate-sell/: Forc.toml
predicate-sell/src/: main.sw
proxy-contract/: Forc.toml
proxy-contract/src/: main.sw  math.sw
scripts/: cancel_order.rs  deploy_proxy.rs  fulfill_buy_order.rs  fulfill_order.rs  fulfill_sell_order.rs  partial_fulfill_buy_order.rs  partial_fulfill_sell_order.rs
src/: addresses.json  lib.rs  limit_orders_utils.rs  main.sw  proxy_utils.rs  spark_utils.rs  token_utils.rs  utils.rs  utils.sw
tests/: harness.rs
tests/artefacts/: tokens.json
tests/local_tests/: cancel_order_test.rs  create_order_test.rs  fulfill_buy_order_test.rs  fulfill_order_test.rs  fulfill_sell_order_test.rs  mod.rs  partial_fulfill_order_test.rs  recreate_order_test.rs
tests/testnet_tests/: cancel_order_test.rs  fulfill_order_test.rs  mod.rs
tests/utils/: local_tests_utils.rs  mod.rs
tests/utils/cotracts_utils/: limit_orders_utils.rs  mod.rs  proxy_utils.rs  token_utils.rs
token/: Forc.toml
