[package]
name = "spark_sdk"
description = "Rust sdk of the Spark"
version = "0.0.2"
edition = "2021"
authors = ["alexey <alexnagornnyy.an@gmail.com>"]
license = "Apache-2.0"

[[test]]
harness = true
name = "tests"
path = "tests/harness.rs"

[dev-dependencies]
tokio = { version = "1.12", features = ["rt", "macros"] }

[dependencies]
dotenv = "0.15.0"
fuels = { version = "0.54.0", features = ["fuel-core-lib"] }
serde = "1.0.163"
serde_json = "1.0.96"
rand = "0.8.5"
