[package]
name = "spark_sdk"
description = "Rust sdk of the Spark"
version = "0.0.2"
edition = "2021"
authors = ["alexey <alexnagornnyy.an@gmail.com>"]
license = "Apache-2.0"

[[test]]
harness = true
name = "tests"
path = "tests/harness.rs"

[dependencies]
tokio = { version = "1.12", features = ["full"] }
dotenv = "0.15.0"
src20_sdk = { git = "https://github.com/compolabs/src-20.git", branch = "master" }
fuels = { version = "0.55.1", features = ["fuel-core-lib"] }
serde = "1.0.197"
serde_json = "1.0.114"
rand = "0.8.5"
sha2 = "0.10.8"


[[bin]]
name = "fulfill_buy_order"
path = "scripts/fulfill_buy_order.rs"

[[bin]]
name = "fulfill_sell_order"
path = "scripts/fulfill_sell_order.rs"

[[bin]]
name = "cancel_order"
path = "scripts/cancel_order.rs"

[[bin]]
name = "deploy_proxy"
path = "scripts/deploy_proxy.rs"
